[gd_scene load_steps=7 format=3 uid="uid://dph7ujhc7bwgv"]

[ext_resource type="Script" uid="uid://nofv2u21173o" path="res://UI/stat_button_dark.gd" id="1_tyvbw"]
[ext_resource type="StyleBox" uid="uid://bgm8gjw8210j0" path="res://UI/Blue Panel.tres" id="2_m8jhr"]
[ext_resource type="Theme" uid="uid://d0dwdlayg7sfd" path="res://UI/Gold Panel.tres" id="2_wtcwg"]
[ext_resource type="Theme" uid="uid://bbbii7whnfq7m" path="res://UI/White Panel.tres" id="3_m8jhr"]
[ext_resource type="Theme" uid="uid://dbpnpas2onmlg" path="res://UI/font theme.tres" id="3_wtcwg"]
[ext_resource type="Texture2D" uid="uid://bgurjlhmn1u0t" path="res://UI/Dice icon.png" id="4_wtcwg"]

[node name="Stat Button" type="TextureButton"]
custom_minimum_size = Vector2(100, 0)
anchors_preset = -1
anchor_right = 0.148
anchor_bottom = 0.16
offset_right = 0.119995
offset_bottom = -1.40001
script = ExtResource("1_tyvbw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_top = -1.0
offset_right = 380.0
offset_bottom = 229.0
theme_override_styles/panel = ExtResource("2_m8jhr")

[node name="RollGoldPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 134.0
offset_top = 46.0
offset_right = 252.0
offset_bottom = 85.0
scale = Vector2(2, 2)
theme = ExtResource("2_wtcwg")

[node name="RollWhitePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 161.0
offset_top = 84.0
offset_right = 262.0
offset_bottom = 99.0
scale = Vector2(2, 2)
theme = ExtResource("3_m8jhr")

[node name="DamageGoldPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 139.0
offset_right = 245.0
offset_bottom = 178.0
scale = Vector2(2, 2)
theme = ExtResource("2_wtcwg")

[node name="DamageWhitePanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 143.0
offset_top = 178.0
offset_right = 252.0
offset_bottom = 193.0
scale = Vector2(2, 2)
theme = ExtResource("3_m8jhr")

[node name="SquareIcon2" type="Sprite2D" parent="."]
position = Vector2(102, 129)
scale = Vector2(1.2, 1.2)
texture = ExtResource("4_wtcwg")

[node name="StatLabel" type="Label" parent="."]
layout_mode = 0
offset_top = -6.0
offset_right = 758.0
offset_bottom = 93.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_wtcwg")
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 60
text = "Elemental Mastery"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatCurrentValue" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 54.0
offset_right = 330.0
offset_bottom = 340.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_wtcwg")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 100
text = "25"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RollModifierValues" type="Label" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 84.0
offset_right = 531.0
offset_bottom = 146.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_wtcwg")
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 40
text = "+25 | x1.75"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DamageModifierValues" type="Label" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 178.0
offset_right = 525.0
offset_bottom = 240.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("3_wtcwg")
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 40
text = "+25 | x1.75"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatRollLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 185.0
offset_top = 47.0
offset_right = 889.0
offset_bottom = 194.0
scale = Vector2(0.25, 0.25)
theme = ExtResource("3_wtcwg")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 120
text = "Roll"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatDamageLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 191.0
offset_top = 139.0
offset_right = 855.0
offset_bottom = 286.0
scale = Vector2(0.25, 0.25)
theme = ExtResource("3_wtcwg")
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 120
text = "Damage"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
